_archive/content-services/4.2/concepts/silent-alf-install.md
---
author: [Alfresco Documentation, Alfresco Documentation]
---

# Installing Alfresco Enterprise in an unattended mode

Alfresco distributes binary all-in-one installers which include a setup wizard built with Bitrock technology. This topic describes how to automate the installation process by running the installers in an unattended mode.

These installers contain all the dependencies you need to quickly get Alfresco up and running. For example, the Alfresco installers install and configure all the necessary software, such as Java, Apache Tomcat, PostgreSQL database, LibreOffice, and ImageMagick. The resulting install is optimized for demonstration and initial evaluation. The installer configures an Alfresco service on Windows and Linux \(if run as root\) for easier startup.

To automate the installation process and customize it for your environment, you can run the install wizard in an **unattended mode** and provide an option file. The available options can be listed by calling the installer executable on the command line and passing it the `--help` flag. You can pass an option file called install\_opts to the installer using a command, such as:

```
./alfresco-enterprise-4.2.0-installer-linux-x64.bin --optionfile install_opts
```

This is an example option file for Enterprise 4.2.0, which installs most components, uses an external database, and does not install the start-up scripts:

```
mode=unattended
enable-components=javaalfresco,alfrescosharepoint,alfrescogoogledocs,libreofficecomponent
disable-components=postgres

# Use JDBC settings for an existing database
jdbc_url=jdbc:postgresql://localhost/alfresco
jdbc_driver=org.postgresql.Driver
jdbc_database=alfresco
jdbc_username=alfresco
jdbc_password=alfresco

# Install location
prefix=/opt/alfresco_42

alfresco_admin_password=admin

# Don't install init scripts
baseunixservice_install_as_service=0
```

The full list of options available are listed:

|Option|Information|
|------|-----------|
|`--help`|Displays the list of valid options|
|`--version`|Displays the product version and information|
|`--unattendedmodeui <option>`|Unattended Mode User Interface. Default is `none`. Options are `none`, `minimal`, `minimalWithDialogs`|
|`--optionfile <option>`|Installation option file|
|`--debuglevel <option>`|Debug information. Default is `2`. Options are `0`, `1`, `2`, `3`, `4`.|
|`--mode <option>`|Installation mode. Default is `gtk`. Options are `gtk`, `xwindow`, `text`, `unattended`.|
|`--debugtrace <option>`|Debugging file name|
|`--enable-components <option>`|Comma-separated list of components. Options are `javaalfresco` `postgres` `alfrescosharepoint` `alfrescogoogledocs` `libreofficecomponent`|
|`--disable-components <option>`|Comma-separated list of components. Options are `javaalfresco` `postgres` `alfrescosharepoint` `alfrescogoogledocs` `libreofficecomponent`|
|`--installer-language <option>`|Language selection. Default is `en`. Options are `en`, `fr`, `es`, `it`, `de`, `ja`, `nl`, `ru`, `zh_CN`, `no`, `pt_BR`|
|`--prefix <option>`|Select a folder|
|`--jdbc_url <option>`|JDBC URL identifier. Default is `jdbc:postgresql://localhost/alfresco`|
|`--jdbc_driver <option>`|JDBC driver. Default is `org.postgresql.Driver`|
|`--jdbc_database <option>`|Database name. Default is `alfresco`|
|`--jdbc_username <option>`|User name|
|`--jdbc_password <option>`|Password|
|`--postgres_port <option>`|Database server port. Default is `5432`|
|`--tomcat_installation_type <option>`|Tomcat installation type|
|`--tomcat_server_domain <option>`|Web server domain|
|`--tomcat_server_port <option>`|Tomcat server port. Default is `8080`|
|`--tomcat_server_shutdown_port <option>`|Tomcat shutdown port. Default is `8005`|
|`--tomcat_server_ssl_port <option>`|Tomcat SSL port. Default is `8443`|
|`--tomcat_server_ajp_port <option>`|Tomcat AJP port. Default is `8009`|
|`--alfresco_ftp_port <option>`|FTP port. Default is `21`|
|`--alfresco_rmi_port <option>`|RMI port. default is `50500`|
|`--alfresco_admin_password <option>`|Admin password|
|`--baseunixservice_install_as_service <option>`|Option to install Alfresco as a service. Default is `1`|
|`--baseunixservice_script_name <option>`|Service script name. Default is `alfresco`|
|`--libreoffice_port <option>`|LibreOffice server port. Default is `8100`|
|`--alfrescocustomstack_services_startup <option>`|Option to automatically start up Alfresco custom services. Default is `demand`. Options are `demand`, `auto`|

**Important:** After installation, you must generate and install your own certificates to secure the installation. For more information, see [Generating Secure Keys for Solr Communication](../tasks/generate-keys-solr.md).

**Parent topic:**[Installing Alfresco using setup wizards](../concepts/installs-eval-intro.md)

